syntax = "proto3";

package containerd.v1.types;

import "gogoproto/gogo.proto";

message Descriptor {
	string mediaType = 1;
	string digest = 2 [(gogoproto.customtype) = "github.com/opencontainers/go-digest.Digest", (gogoproto.nullable) = false];
	int64 mediaSize = 3;
}
